# Cprogramming-lab-finalassignment

./: .gitignore  Makefile  Makefile.am  README.md  analyse.c  bst.c  configure.ac  fgetline.c  fgetword.c  main.c  main.h  plot.c  sen_bgn_wrd.c  syllablecount.c  text_analysis.h  word.c
include/: bst.h  main.h  text_analysis.h
src/: analyse.c  bst.c  fgetline.c  main.c  sen_bgn_wrd.c  syllablecount.c  word.c
test/: JaneAusten_SenseAndSensibility.txt  ThomasHardy_FarFromTheMaddingCrowd.txt
